--- a/Documents/NetBeansProjects/j60/blog/blogAvalonRu/blog.avalon.ru/src/java/ru/avalon/blog/resources/labels.properties
+++ b/Documents/NetBeansProjects/j60/blog/blogAvalonRu/blog.avalon.ru/src/java/ru/avalon/blog/resources/labels.properties
@@ -14,3 +14,7 @@ label.confirm-save.action = Confirm & save
 label.blog = Blog
 label.author = Author
 label.contacts = Contact us
+label.publication.title = Publication
+label.publication.action = Publicate
+label.publication.name = Title
+label.publication.content = Text of your publication
