no func changes. added support tag, started edition index.jsp

--- a/Documents/NetBeansProjects/j60/blog/blogAvalonRu/blog.avalon.ru/src/java/ru/avalon/blog/resources/labels.properties
+++ b/Documents/NetBeansProjects/j60/blog/blogAvalonRu/blog.avalon.ru/src/java/ru/avalon/blog/resources/labels.properties
@@ -18,3 +18,5 @@ label.publication.title = Publication
 label.publication.action = Publicate
 label.publication.name = Title
 label.publication.content = Text of your publication
+label.blog.title = Blog J60-exam
+label.blog.show.action = Show publications
